2010-07-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        check-webkit-style shouldn't complain about NPAPI functions
        https://bugs.webkit.org/show_bug.cgi?id=43211

        Allow underscores in functions that start with NPN_, NPP_ or NP_.

        * Scripts/webkitpy/style/checkers/cpp.py:
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:

2010-07-29  Victor Wang  <victorw@chromium.org>

        Unreviewed, rolling out r64270.
        http://trac.webkit.org/changeset/64270
        https://bugs.webkit.org/show_bug.cgi?id=39589

        The patch breaks chromium webkit unittest

        * DumpRenderTree/LayoutTestController.cpp:
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        * DumpRenderTree/chromium/LayoutTestController.h:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        * DumpRenderTree/qt/LayoutTestControllerQt.h:
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        * Scripts/build-webkit:

2010-07-29  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] QtTestBrowser: Move WebPage class methods definitions from main.cpp to webpage.cpp
        https://bugs.webkit.org/show_bug.cgi?id=43199

        There is no sense in keeping WebPage method definitions in main.cpp once
        webpage.cpp already exists.

        No behavior change.

        * QtTestBrowser/main.cpp:
        * QtTestBrowser/webpage.cpp:
        (WebPage::createWindow):
        (WebPage::createPlugin):

2010-07-29  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.
